--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotica_core
-	base = 99c22c55
-	trimbase = 
+	base = 2cbfd528
+	trimbase = 99c22c55
 	parent = upstream
 	previous = 169b8701
