--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotica_examples
-	base = ec174ffc
-	trimbase = 
+	base = fbc7bff3
+	trimbase = ec174ffc
 	parent = upstream
 	previous = 169b8701
