--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotica_python
-	base = 87dc67f3
-	trimbase = 
+	base = d91f5768
+	trimbase = 87dc67f3
 	parent = upstream
 	previous = 169b8701
