--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotica
-	base = cf15698f
-	trimbase = 
+	base = e68103e0
+	trimbase = cf15698f
 	parent = upstream
 	previous = 169b8701
