--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ompl_solver
 	base = 6e62ef1b
-	trimbase = 89018a3d
+	trimbase = 
 	parent = upstream
 	previous = 5f743166
