--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/exotica_collision_scene_fcl_latest
-	base = 13199ede
-	trimbase = 
+	base = 8ce372b0
+	trimbase = 13199ede
 	parent = upstream
 	previous = 169b8701
