--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ilqg_solver
 	base = 9bee2249
-	trimbase = f4bf892c
+	trimbase = 
 	parent = upstream
 	previous = 5f743166
