--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ompl_solver
-	base = d8f50342
-	trimbase = 
+	base = 58ab36ec
+	trimbase = d8f50342
 	parent = upstream
 	previous = 169b8701
