--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ilqg_solver
-	base = 9c07f020
-	trimbase = 
+	base = d497d030
+	trimbase = 9c07f020
 	parent = upstream
 	previous = 169b8701
