--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ilqr_solver
 	base = fba6b6d7
-	trimbase = cbab1f65
+	trimbase = 
 	parent = upstream
 	previous = 5f743166
