--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ilqr_solver
-	base = 1ba99d8f
-	trimbase = 
+	base = afead9fc
+	trimbase = 1ba99d8f
 	parent = upstream
 	previous = 169b8701
