--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_aico_solver
 	base = 94d1cc7d
-	trimbase = e259bd23
+	trimbase = 
 	parent = upstream
 	previous = 5f743166
