--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_aico_solver
-	base = 73e6cfab
-	trimbase = 
+	base = 3eb253ce
+	trimbase = 73e6cfab
 	parent = upstream
 	previous = 169b8701
