--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ik_solver
 	base = 3b317a1b
-	trimbase = 449328f0
+	trimbase = 
 	parent = upstream
 	previous = 5f743166
