--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ik_solver
-	base = f1b1614d
-	trimbase = 
+	base = bcc12882
+	trimbase = f1b1614d
 	parent = upstream
 	previous = 169b8701
