--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ddp_solver
 	base = c8f25581
-	trimbase = eb87f6e8
+	trimbase = 
 	parent = upstream
 	previous = 5f743166
