--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ompl_control_solver
-	base = 3a07c131
-	trimbase = 
+	base = 41541acb
+	trimbase = 3a07c131
 	parent = upstream
 	previous = 169b8701
