--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ddp_solver
-	base = ac481fd5
-	trimbase = 
+	base = 27fec654
+	trimbase = ac481fd5
 	parent = upstream
 	previous = 169b8701
