--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_levenberg_marquardt_solver
 	base = 7ce18fca
-	trimbase = 825422e0
+	trimbase = 
 	parent = upstream
 	previous = 5f743166
