--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_levenberg_marquardt_solver
-	base = dd35f701
-	trimbase = 
+	base = 2a046fb7
+	trimbase = dd35f701
 	parent = upstream
 	previous = 169b8701
