--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_time_indexed_rrt_connect_solver
 	base = f35d4567
-	trimbase = 6a5e275a
+	trimbase = 
 	parent = upstream
 	previous = 5f743166
