--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_time_indexed_rrt_connect_solver
-	base = 78dda265
-	trimbase = 
+	base = 8b92ff0e
+	trimbase = 78dda265
 	parent = upstream
 	previous = 169b8701
