--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_scipy_solver
-	base = c8bdceaa
-	trimbase = 
+	base = 0f09ba36
+	trimbase = c8bdceaa
 	parent = upstream
 	previous = 169b8701
