--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_scipy_solver
 	base = f1acb239
-	trimbase = 7e1f175e
+	trimbase = 
 	parent = upstream
 	previous = 5f743166
