--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_pinocchio_dynamics_solver
 	base = 06183323
-	trimbase = e185e0f5
+	trimbase = 
 	parent = upstream
 	previous = 5f743166
