--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_cartpole_dynamics_solver
 	base = f5d8004a
-	trimbase = 03c049b7
+	trimbase = 
 	parent = upstream
 	previous = 5f743166
