--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_pinocchio_dynamics_solver
-	base = 28e56b8a
-	trimbase = 
+	base = 5b99f703
+	trimbase = 28e56b8a
 	parent = upstream
 	previous = 169b8701
