--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_cartpole_dynamics_solver
-	base = 3feedd39
-	trimbase = 
+	base = 0a646cc1
+	trimbase = 3feedd39
 	parent = upstream
 	previous = 169b8701
