--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_pendulum_dynamics_solver
-	base = f9d64ebe
-	trimbase = 
+	base = 5398fbe0
+	trimbase = f9d64ebe
 	parent = upstream
 	previous = 169b8701
