--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_pendulum_dynamics_solver
 	base = e790ad5c
-	trimbase = 43cc3cf6
+	trimbase = 
 	parent = upstream
 	previous = 5f743166
