--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_double_integrator_dynamics_solver
 	base = 186161ae
-	trimbase = 9808e9ae
+	trimbase = 
 	parent = upstream
 	previous = 5f743166
