--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_dynamics_solvers
 	base = a7bb3064
-	trimbase = f403eb0e
+	trimbase = 
 	parent = upstream
 	previous = 5f743166
