--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_double_integrator_dynamics_solver
-	base = 6b4dfca4
-	trimbase = 
+	base = c2be84b0
+	trimbase = 6b4dfca4
 	parent = upstream
 	previous = 169b8701
