--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_dynamics_solvers
-	base = fe13b771
-	trimbase = 
+	base = 580faf35
+	trimbase = fe13b771
 	parent = upstream
 	previous = 169b8701
