--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_quadrotor_dynamics_solver
-	base = 702f1aed
-	trimbase = 
+	base = 02759a59
+	trimbase = 702f1aed
 	parent = upstream
 	previous = 169b8701
