--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/exotica_core_task_maps
 	base = 7b66bb6c
-	trimbase = a9d456fb
+	trimbase = 
 	parent = upstream
 	previous = 5f743166
