--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/exotica_core_task_maps
-	base = cbb72f2d
-	trimbase = 
+	base = 6add48af
+	trimbase = cbb72f2d
 	parent = upstream
 	previous = 169b8701
