--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotica_core
-	base = 7954f3e9
-	trimbase = 
+	base = 32f20cd3
+	trimbase = 7954f3e9
 	parent = upstream
 	previous = 04b9412d
