--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotica_examples
-	base = 223fbc82
-	trimbase = 
+	base = ba1b69bd
+	trimbase = 223fbc82
 	parent = upstream
 	previous = 04b9412d
