--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotica_python
-	base = 44376ac4
-	trimbase = 
+	base = 54e774dd
+	trimbase = 44376ac4
 	parent = upstream
 	previous = 04b9412d
