--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotica
-	base = d4553146
-	trimbase = 
+	base = 4bfb25b0
+	trimbase = d4553146
 	parent = upstream
 	previous = 04b9412d
