--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/exotica_collision_scene_fcl_latest
 	base = 437e715c
-	trimbase = caa797b7
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
