--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ompl_solver
 	base = 252f8597
-	trimbase = 1ee9167d
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
