--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/exotica_collision_scene_fcl_latest
-	base = 062c98b2
-	trimbase = 
+	base = fcca9359
+	trimbase = 062c98b2
 	parent = upstream
 	previous = 04b9412d
