--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ilqg_solver
 	base = b9145154
-	trimbase = 67646933
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
