--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ompl_solver
-	base = 7c4289ef
-	trimbase = 
+	base = 164d2ca0
+	trimbase = 7c4289ef
 	parent = upstream
 	previous = 04b9412d
