--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ilqg_solver
-	base = c5a6fabe
-	trimbase = 
+	base = 913d76b0
+	trimbase = c5a6fabe
 	parent = upstream
 	previous = 04b9412d
