--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ilqr_solver
-	base = 08245c58
-	trimbase = 
+	base = 358b3f90
+	trimbase = 08245c58
 	parent = upstream
 	previous = 04b9412d
