--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ilqr_solver
 	base = d19afcd2
-	trimbase = 02eb832d
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
