--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_aico_solver
 	base = 5f0bf076
-	trimbase = 90bd9cbf
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
