--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_aico_solver
-	base = 76531721
-	trimbase = 
+	base = 42277925
+	trimbase = 76531721
 	parent = upstream
 	previous = 04b9412d
