--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ik_solver
 	base = 4966ba93
-	trimbase = ba960ed6
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
