--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ik_solver
-	base = b8fcf0d1
-	trimbase = 
+	base = e839db32
+	trimbase = b8fcf0d1
 	parent = upstream
 	previous = 04b9412d
