--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ompl_control_solver
 	base = 21ba91bc
-	trimbase = 273aa132
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
