--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ompl_control_solver
-	base = ddf53a44
-	trimbase = 
+	base = c176eff8
+	trimbase = ddf53a44
 	parent = upstream
 	previous = 04b9412d
