--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ddp_solver
-	base = 3dc2407d
-	trimbase = 
+	base = 33e64d3c
+	trimbase = 3dc2407d
 	parent = upstream
 	previous = 04b9412d
