--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ddp_solver
 	base = de620071
-	trimbase = 326e0564
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
