--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_levenberg_marquardt_solver
 	base = 3a7feb75
-	trimbase = 08255920
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
