--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_levenberg_marquardt_solver
-	base = 1dd2d217
-	trimbase = 
+	base = 2acf781c
+	trimbase = 1dd2d217
 	parent = upstream
 	previous = 04b9412d
