--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_time_indexed_rrt_connect_solver
 	base = 2a9f4f20
-	trimbase = 454f0ed4
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
