--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_time_indexed_rrt_connect_solver
-	base = 00028bfb
-	trimbase = 
+	base = 9aa49f94
+	trimbase = 00028bfb
 	parent = upstream
 	previous = 04b9412d
