--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_scipy_solver
 	base = 94c3a263
-	trimbase = 4eca0d08
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
