--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_scipy_solver
-	base = d081572a
-	trimbase = 
+	base = b2600859
+	trimbase = d081572a
 	parent = upstream
 	previous = 04b9412d
