--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_pinocchio_dynamics_solver
 	base = 531bc874
-	trimbase = 36867bd6
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
