--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_cartpole_dynamics_solver
 	base = 9ddd89a4
-	trimbase = 8a487c02
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
