--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_pinocchio_dynamics_solver
-	base = ebfb81dd
-	trimbase = 
+	base = e435eee7
+	trimbase = ebfb81dd
 	parent = upstream
 	previous = 04b9412d
