--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_cartpole_dynamics_solver
-	base = 595c1ed1
-	trimbase = 
+	base = 7e483900
+	trimbase = 595c1ed1
 	parent = upstream
 	previous = 04b9412d
