--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_pendulum_dynamics_solver
-	base = 5faa4fc6
-	trimbase = 
+	base = a88dd363
+	trimbase = 5faa4fc6
 	parent = upstream
 	previous = 04b9412d
