--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_pendulum_dynamics_solver
 	base = c963309b
-	trimbase = f1f3bdaf
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
