--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_double_integrator_dynamics_solver
 	base = b2c94eb7
-	trimbase = d5885839
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
