--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_dynamics_solvers
 	base = 6a0fd674
-	trimbase = d6ac3058
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
