--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_double_integrator_dynamics_solver
-	base = 63a23593
-	trimbase = 
+	base = 0b1f6bea
+	trimbase = 63a23593
 	parent = upstream
 	previous = 04b9412d
