--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_quadrotor_dynamics_solver
 	base = 7bde7646
-	trimbase = 1ce03b62
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
