--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_dynamics_solvers
-	base = 49423776
-	trimbase = 
+	base = 1602fccc
+	trimbase = 49423776
 	parent = upstream
 	previous = 04b9412d
