--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_quadrotor_dynamics_solver
-	base = 3791bcfd
-	trimbase = 
+	base = b27388de
+	trimbase = 3791bcfd
 	parent = upstream
 	previous = 04b9412d
