--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/exotica_core_task_maps
 	base = cdb5e11c
-	trimbase = b51ed609
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
