--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/exotica_core_task_maps
-	base = becbad19
-	trimbase = 
+	base = 4a28d84b
+	trimbase = becbad19
 	parent = upstream
 	previous = 04b9412d
