--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>exotica_pinocchio_dynamics_solver</name>
-  <version>6.1.1</version>
+  <version>6.2.0</version>
   <description>Dynamics solver plug-in using Pinocchio for Exotica</description>
 
   <maintainer email="wolfgang@robots.ox.ac.uk">Wolfgang Merkt</maintainer>
@@ -17,6 +17,7 @@
   <exec_depend>exotica_core</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>pinocchio</exec_depend>
+  <depend>clang</depend>
 
   <export>
     <exotica_core plugin="${prefix}/exotica_plugins.xml" />
