--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotica_core
-	base = 9a3eaa93
-	trimbase = 
+	base = 15c3dd8b
+	trimbase = 9a3eaa93
 	parent = upstream
 	previous = 04b9412d
