--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotica_examples
-	base = 4ff78444
-	trimbase = 
+	base = 0f23e3b4
+	trimbase = 4ff78444
 	parent = upstream
 	previous = 04b9412d
