--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotica_python
-	base = 220ee9ce
-	trimbase = 
+	base = bdb7ef7a
+	trimbase = 220ee9ce
 	parent = upstream
 	previous = 04b9412d
