--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotica
-	base = e0206f53
-	trimbase = 
+	base = c627cbd8
+	trimbase = e0206f53
 	parent = upstream
 	previous = 04b9412d
