--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/exotica_collision_scene_fcl_latest
-	base = 06768cf4
-	trimbase = 
+	base = b2c46ef3
+	trimbase = 06768cf4
 	parent = upstream
 	previous = 04b9412d
