--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ompl_solver
-	base = 38e659db
-	trimbase = 
+	base = 6222a40b
+	trimbase = 38e659db
 	parent = upstream
 	previous = 04b9412d
