--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ompl_solver
 	base = c2667bc2
-	trimbase = 3188743d
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
