--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ilqg_solver
-	base = 778e8e22
-	trimbase = 
+	base = a7ca154e
+	trimbase = 778e8e22
 	parent = upstream
 	previous = 04b9412d
