--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ilqg_solver
 	base = 123c2971
-	trimbase = 9bd200c4
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
