--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ilqr_solver
 	base = 216e3c57
-	trimbase = d0bbdbba
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
