--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_aico_solver
 	base = c904c5a1
-	trimbase = 8e702de1
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
