--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ilqr_solver
-	base = 373afe66
-	trimbase = 
+	base = bf3985df
+	trimbase = 373afe66
 	parent = upstream
 	previous = 04b9412d
