--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_aico_solver
-	base = 722c89b9
-	trimbase = 
+	base = 48d2dfd0
+	trimbase = 722c89b9
 	parent = upstream
 	previous = 04b9412d
