--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ik_solver
-	base = 5c7ca362
-	trimbase = 
+	base = 08b5bcb7
+	trimbase = 5c7ca362
 	parent = upstream
 	previous = 04b9412d
