--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ik_solver
 	base = a39922af
-	trimbase = 8972be61
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
