--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ompl_control_solver
-	base = 887d76d7
-	trimbase = 
+	base = e89b2d57
+	trimbase = 887d76d7
 	parent = upstream
 	previous = 04b9412d
