--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ompl_control_solver
 	base = 4f4fd799
-	trimbase = f39c2244
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
