--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ddp_solver
 	base = 3c2fd2ed
-	trimbase = b7dceddd
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
