--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_levenberg_marquardt_solver
 	base = 090e2f67
-	trimbase = 376aaef8
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
