--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_ddp_solver
-	base = 8c9130f9
-	trimbase = 
+	base = 380ccaa2
+	trimbase = 8c9130f9
 	parent = upstream
 	previous = 04b9412d
