--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_levenberg_marquardt_solver
-	base = 62c52f95
-	trimbase = 
+	base = efbf278e
+	trimbase = 62c52f95
 	parent = upstream
 	previous = 04b9412d
