--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_time_indexed_rrt_connect_solver
 	base = e1c8a8d7
-	trimbase = 7c266866
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
