--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_time_indexed_rrt_connect_solver
-	base = 96d0874e
-	trimbase = 
+	base = 5f75aa6e
+	trimbase = 96d0874e
 	parent = upstream
 	previous = 04b9412d
