--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/solvers/exotica_scipy_solver
-	base = a9fef5ce
-	trimbase = 
+	base = b6e9a47d
+	trimbase = a9fef5ce
 	parent = upstream
 	previous = 04b9412d
