--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_pinocchio_dynamics_solver
-	base = 27cbd1ff
-	trimbase = 
+	base = f35f286e
+	trimbase = 27cbd1ff
 	parent = upstream
 	previous = 04b9412d
