--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_cartpole_dynamics_solver
 	base = 8ac85a86
-	trimbase = 1499e8d8
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
