--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_cartpole_dynamics_solver
-	base = 75850bad
-	trimbase = 
+	base = b29d598a
+	trimbase = 75850bad
 	parent = upstream
 	previous = 04b9412d
