--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_pendulum_dynamics_solver
 	base = 00e785fb
-	trimbase = c78c6e18
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
