--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_double_integrator_dynamics_solver
 	base = d0fa45eb
-	trimbase = 613fea7d
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
