--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_pendulum_dynamics_solver
-	base = d8009b0b
-	trimbase = 
+	base = fc0d35d4
+	trimbase = d8009b0b
 	parent = upstream
 	previous = 04b9412d
