--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_double_integrator_dynamics_solver
-	base = a257a3ee
-	trimbase = 
+	base = e605f7db
+	trimbase = a257a3ee
 	parent = upstream
 	previous = 04b9412d
