--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_dynamics_solvers
-	base = ab6c1fd2
-	trimbase = 
+	base = 0937020e
+	trimbase = ab6c1fd2
 	parent = upstream
 	previous = 04b9412d
