--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_quadrotor_dynamics_solver
 	base = eda99d9a
-	trimbase = f8ac5683
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
