--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/dynamics_solvers/exotica_quadrotor_dynamics_solver
-	base = 9d7ec850
-	trimbase = 
+	base = 4ab22b9b
+	trimbase = 9d7ec850
 	parent = upstream
 	previous = 04b9412d
