--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/exotica_core_task_maps
 	base = a8c6c051
-	trimbase = eade2b1e
+	trimbase = 
 	parent = upstream
 	previous = 169b8701
