--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = exotations/exotica_core_task_maps
-	base = 892bd44f
-	trimbase = 
+	base = d6a80bea
+	trimbase = 892bd44f
 	parent = upstream
 	previous = 04b9412d
